- minor changes to readme - minor change to math functions in TablistManager.java - fix player guild tag left behind at world change event